--- a/index (1).html
+++ b/index (1).html
@@ -23,7 +23,7 @@
   <div id="loading"></div>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="./index.html">Komal Bank</a>
+    <a class="navbar-brand" href="./index.html">Pratima Bank</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -64,8 +64,8 @@
       <p>&copy; 2024 All Rights Reserved.</p>
     </div>
     <div class="f-link">
-      <a target="_blank" class="github" href="https://github.com/komal858"><i class="fab fa-github fa-2x"></i></a>
-      <a target="_blank" class="linkedin" href="https://www.linkedin.com/in/komal-agrawal-92524a266/"><i
+      <a target="_blank" class="github" href="https://github.com/psalgar123/Payment-Gateway-Integration-Task-3"><i class="fab fa-github fa-2x"></i></a>
+      <a target="_blank" class="linkedin" href="https://www.linkedin.com/in/pratima-salgar-402283222/"><i
           class="fab fa-linkedin fa-2x"></i></a>
     </div>
 
