--- a/customers.html
+++ b/customers.html
@@ -35,7 +35,7 @@
     </nav>
 
     <div class="my-info text-center">
-        <h2>Name: Komal Agrawal </h2>
+        <h2>Name: Pratima Salgar </h2>
         <h4>Bank Balance: $<span id="myAccountBalance">99000</span></h4>
 
         <button class="btn btn-info" data-toggle="modal" data-target="#sendMoney">Send Money</button>
